; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_next_hook_tex.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_next_hook_tex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_tex = type { i32 }
%struct.gl_video = type { i64, i64, %struct.ra_tex** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ra_tex** (%struct.gl_video*)* @next_hook_tex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ra_tex** @next_hook_tex(%struct.gl_video* %0) #0 {
  %2 = alloca %struct.gl_video*, align 8
  store %struct.gl_video* %0, %struct.gl_video** %2, align 8
  %3 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %4 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %7 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %5, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %1
  %11 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %12 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %13 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %12, i32 0, i32 2
  %14 = load %struct.ra_tex**, %struct.ra_tex*** %13, align 8
  %15 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %16 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @MP_TARRAY_APPEND(%struct.gl_video* %11, %struct.ra_tex** %14, i64 %17, i32* null)
  br label %19

19:                                               ; preds = %10, %1
  %20 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %21 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %20, i32 0, i32 2
  %22 = load %struct.ra_tex**, %struct.ra_tex*** %21, align 8
  %23 = load %struct.gl_video*, %struct.gl_video** %2, align 8
  %24 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, 1
  store i64 %26, i64* %24, align 8
  %27 = getelementptr inbounds %struct.ra_tex*, %struct.ra_tex** %22, i64 %25
  ret %struct.ra_tex** %27
}

declare dso_local i32 @MP_TARRAY_APPEND(%struct.gl_video*, %struct.ra_tex**, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
